Fix: Mobile background position, mobile spacing, mobile screenshot.

--- a/newbie/huddle-landing-page/styles.sass
+++ b/newbie/huddle-landing-page/styles.sass
@@ -108,9 +108,9 @@ p
     background-image: url(media/bg-mobile.svg)
     background-position: top center
     background-repeat: no-repeat
-    background-size: cover
-    padding-left: min(2.5rem, 10vw)
-    padding-right: min(2.5rem, 10vw)
+    background-size: contain
+    padding-left: max(1rem, 10vw)
+    padding-right: max(1rem, 10vw)
 
   footer
     gap: 0.625rem
@@ -133,13 +133,14 @@ p
     text-align: center
 
   .img-logo
-    height: 1.188rem
-    padding-bottom: 3.375rem
+    height: auto
+    max-height: 25vh
+    object-fit: contain
+    padding-bottom: 1rem
     width: 7.5rem
 
   .img-mockup
     height: auto
-    max-height: 25vh
     padding-bottom: 3.75rem
     object-fit: contain
     width: 100%
@@ -149,7 +150,7 @@ p
     width: 1.75rem
 
   .layout-container
-    padding-top: 3.75rem
+    padding-top: 1.75rem
     flex-direction: column
     gap: 1rem
     justify-content: space-between
